@@ -1,3 +1,6 @@
+2011-04-16  6.6.9-6 Cristy  <quetzlzacatenango@image...>
+  * Support the HDR 32-bit_rle_xyze format.
+
 2011-04-15  6.6.9-5 Cristy  <quetzlzacatenango@image...>
   * New version 6.6.9-5.
 
